# pysap-mri

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  gpu_requirements.txt  index.html  objects.inv  pyproject.toml  pytest.xml  search.html  searchindex.js  setup.cfg  setup.py
.circleci/: config.yml  test_script.py
.github/: test-docs.yml
.github/workflows/: cancel.yml  ci-build.yml  test-docs.yml
_downloads/: cartesian_reconstruction.ipynb  non_cartesian_reconstruction.ipynb
_modules/: index.html
_modules/mri/: gridsearch.html
_sources/: index.txt
_sources/auto_gallery/: cartesian_reconstruction.txt  gallery.txt  non_cartesian_reconstruction.txt
auto_gallery/: cartesian_reconstruction.html  gallery.html  non_cartesian_reconstruction.html
doc/: refs.bib  requirements.txt
doc/source/: conf.py
examples/: CalibrationlessReconstruction_Cartesian.py  CalibrationlessReconstruction_GL_Cartesian.py  CalibrationlessReconstruction_OWL_Cartesian.py  Load_Results.py  NonCartesian_DensityCompensation.py  README.txt  SelfCalibrationReconstruction_Cartesian.py  cartesian_reconstruction.py  cartesian_reconstruction_3d.py  cartesian_reconstruction_auto_threshold.py  gridsearch_launch.py  non_cartesian_reconstruction.py  non_cartesian_reconstruction_stack_3d.py  p_mri_3d_recon.py  p_mri_group_lasso.py  p_mri_non_cartesian_3d_reconstruction.py  p_mri_non_cartesian_calibrationless_3d_reconstruction.py  p_mri_oscar.py  p_mri_oscar_largeN.py  p_mri_rewighted_l1.py  pmri_3d_example.npy.py  test.py  testNUFFT.py
examples/GPU_Examples/: NonCartesian_Pipe_DensityCompensation.py  NonCartesian_gpuNUFFT_DensityCompensation.py  NonCartesian_gpuNUFFT_SENSE_DensityCompensation.py  SelfCalibrationReconstruction_NonCartesian_gpuNUFFT_SENSE.py
examples/GPU_Tests/: SelfCalibrationReconstruction_NonCartesian.py  test_gpuNUFFT.py
mri/: gridsearch.py  info.py
mri/dictionary_learning/: utils.py
mri/generators/: __init__.py  base.py  cartesian.py
mri/numerics/: cost.py  fourier.py  gradient.py  gridsearch.py  linear.py  proximity.py  reconstruct.py  reweight.py  utils.py
mri/operators/: __init__.py  _base.py  base.py
mri/optimizers/: __init__.py  _forward_backward.py  _primal_dual.py  base.py  forward_backward.py  primal_dual.py
mri/parallel_mri/: extract_sensitivity_maps.py  gradient.py  proximity.py
mri/parallel_mri_online/: gradient.py  proximity.py  utils.py
mri/reconstruct/: cost.py  fourier.py  gradient.py  linear.py  (+1 more)
test_local/: test_fourier_adjoint_gpu.py
tests/: test_fourier_adjoint.py  test_generators.py  test_orc_wrapper.py  test_scripts.py  test_sensitivity_extraction.py
(+104 files in other folders)
