[aliases]
test = pytest

[metadata]
description-file = README.rst

[tool:pytest]
addopts =
    -n 3
    --verbose
    --cov=mri
    --cov-config=.coveragerc
    --ignore-glob='*test_local*.py'
    --cov-report=term
    --cov-report=xml
    --junitxml=pytest.xml
    --maxfail=2
testpaths = mri/tests/
